intro modal finished

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
-<title>Pac-man</title>
+<title>Pac-Portfolio</title>
 <link rel="stylesheet" href="./libs/css/styles.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
@@ -20,7 +20,8 @@
         </div>
         <div class="modal-body">
             <div class="alert alert-success">
-                <h6>Welcome to my creative Pac-Portfolio. Rush over to safe colored shelters where you would be able to relax and check different sections of my portfolio. If you don't feel like eating pac-dots you can skip the action by clicking in the links below. Good luck in any case and I hope to hear from you. Enjoy!</h6>
+                <h2>Hi! Welcome to my creative Pac-Portfolio! Rush up into safe colored shelter areas where you would be able to relax and know a little bit more about me. If you don't feel like eating pac-dots today you can also navigate the sections by clicking the links under the board. Good luck in any case and I hope to hear from you. Enjoy!</h2>
+                
             </div>
         </div>
         <div class="modal-footer">
@@ -152,7 +153,6 @@
 
     </div>
 
-   
     <script src="./libs/js/pac-portfolio.js" charset="utf-8"></script>
 </body>
 </html>
